# youtube-comments-analyzer

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yaml
backend/: app.py  requirements.txt
deploy/scripts/: start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_EDA.ipynb  02_training_a_baseline_model.ipynb  03_creating_preprocessed_data.ipynb  04_bow_vs_tf-idf.ipynb  05_bow_bigrams_max_features.ipynb  06_handling_imbalanced_data.ipynb  07_xgboost_hpt.ipynb  08_lightgbm_hpt.ipynb  09_svm_hpt.ipynb  10_log_reg_hpt.ipynb  11_knn_hpt.ipynb  12_naive_bayes_hpt.ipynb  13_random_forest_hpt.ipynb  15_xgboost_detailed_hpt.ipynb  16_svm_detailed_hpt.ipynb  17_log_reg_detailed_hpt.ipynb  18_lightgbm_class_weights.ipynb  19_lightgbm_word2vec.ipynb  20_lightgbm_custom_features.ipynb  21_stacking.ipynb
reports/figures/: .gitignore
scripts/: promote_model.py
tests/: test_fast_api.py  test_model_loading.py  test_model_performance.py  test_model_signature.py
youtube_comments_analyzer/: __init__.py  config.py  data_ingestion.py  data_preprocessing.py  dataset.py  feature_engineering.py  features.py  model_evaluation.py  model_registration.py  model_training.py  plots.py
youtube_comments_analyzer/modeling/: predict.py  train.py
youtube_comments_analyzer/utils/: common.py
