[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "youtube_comments_analyzer"
version = "0.0.1"
description = "This is a sentiment analysis project that uses sentiment analysis to analyze YouTube video comments and displays useful analytics using a Google Chrome plugin."
authors = [
  { name = "Sushrut Gaikwad" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["youtube_comments_analyzer"]
include = ["pyproject.toml", "youtube_comments_analyzer/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["youtube_comments_analyzer"]
force-sort-within-sections = true

